--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
     "mongoose": "^6.0.10",
     "nodemon": "^2.0.13"
   }
